<resources>
    <string name="app_name">StoreApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marko Informática</string>
    <string name="nav_header_subtitle">www.grupomarko.com.br</string>
    <string name="nav_header_desc">Marko Informática</string>

    <string name="action_search">Procurar</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_cart">Carrinho</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Carrinho</string>
    <string name="menu_detail">Detalhe</string>
    <string name="menu_login">Login</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_products">Produtos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_signup">Cadastro</string>

    <string name="home_second">Home Second</string>

    <!-- HOME -->
    <string name="home_main_image">Imagem principal</string>
</resources>
